# gravityModel

./: CMakeLists.txt  example_ThreeBodies_Triangle.txt  example_TwoBodies_SameX.txt  example_TwoBodies_SameX_InitV.txt  example_TwoBodies_SameY.txt  main.cpp  main.h  myConfig.h.in  myTests.cpp  readme.txt  testReadFile_input.txt
Body/: Body.h  CMakeLists.txt
myLib/: CMakeLists.txt  myLib.cpp  myLib.h
myTests/: CMakeLists.txt  myTests.cpp
